change team and making

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making" id="about__us">
             <div class="container_making-coffee">
-                <div class="master_making_img">
+                <div class="img_making">
                     <img class="image__making" src="img/master_coffee_making.png" alt="image__making">
                 </div>
                 <div class="columns_making__coffee">
@@ -192,7 +192,7 @@
                         <h3 class="h3_master_coffee_making">PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN
                             NEW
                             YORK</h3>
-                        <hr class="hr_logo_making">
+                        <div class="shot__line"></div>
                         <p class="p_making_coffee_fonts_h3">Coffee Lab School is an educational playground for people
                             who
                             cast
@@ -225,7 +225,7 @@
             <div class="team__column">
                 <p class="fonts_logo_team">Team</p>
                 <h2 class="h2_team">MEET OUR TEAM</h2>
-                <hr class="hr_logo_team">
+                <div class="shot__line"></div>
                 <p class="p_font_team">These are our baristas that are going to teach you all the magic:</p>
             </div>
             <div class="team_cards">
@@ -241,11 +241,11 @@
                             on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
                             coffee, ask Garry.</p>
                         <div class="team__icons">
-                            <a class="team__icon_font" href="http://facebook.com">
+                            <a class="team__icon_font" type="submit" href="http://facebook.com">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a class="team__icon_font" href="http://instagram.com">
+                            <a class="team__icon_font" type="submit" href="http://instagram.com">
                                 <i class="fa-brands fa-instagram"></i></a>
-                            <a class="team__icon_font" href="http://youtube.com">
+                            <a class="team__icon_font" type="submit" href="http://youtube.com">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
@@ -261,11 +261,11 @@
                             coffee art, and, through her lessons, you will learn how to make a perfect canvas on the
                             latte foam.</p>
                         <div class="team__icons">
-                            <a class="team__icon_font" href="http://facebook.com">
+                            <a class="team__icon_font" type="submit" href="http://facebook.com">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a class="team__icon_font" href="http://instagram.com">
+                            <a class="team__icon_font" type="submit" href="http://instagram.com">
                                 <i class="fa-brands fa-instagram"></i></a>
-                            <a class="team__icon_font" href="http://youtube.com">
+                            <a class="team__icon_font" type="submit" href="http://youtube.com">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
@@ -282,11 +282,11 @@
                             will teach you how to structure a coffee business from a big ambition to a famous go-to
                             venue.</p>
                         <div class="team__icons">
-                            <a class="team__icon_font" href="http://facebook.com">
+                            <a class="team__icon_font" type="submit" href="http://facebook.com">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a class="team__icon_font" href="http://instagram.com">
+                            <a class="team__icon_font" type="submit" href="http://instagram.com">
                                 <i class="fa-brands fa-instagram"></i></a>
-                            <a class="team__icon_font" href="http://youtube.com">
+                            <a class="team__icon_font" type="submit" href="http://youtube.com">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                             <a href="#" class="button_cold_latte_open" target="_blank">Open</a>
                         </div>
                     </div>
-                    
+
                     <div class="cheese_dessert">
                         <!-- <img id="cheese_dessert" src="img/photo_cheese_desert.jpg" alt="photo_cheese_desert"> -->
                         <div class="content_cl">
@@ -529,7 +529,7 @@
                 <hr id="hr_after_p-y">
                 <p class="few_things">A few things you should know about coffee making.</p>
                 <div class="coffe_making">
-                    <img src="img/logo_coffee_maker.svg"  alt="logo_coffee_maker">
+                    <img src="img/logo_coffee_maker.svg" alt="logo_coffee_maker">
                     <div class="coffe_maker_text">
                         <h4>PROFESSIONAL EQUIPMENT</h4>
                         <p>Without a good espresso machine, you won't get delicious coffee.</p>
