add section blog

--- a/index.html
+++ b/index.html
@@ -205,6 +205,47 @@
                 </div>
             </div>
         </section>
+        <section class="blog">
+            <div class="container__blog">
+                
+                
+                <button type="button" class="btn_blog_prev"><i class="fa-solid fa-circle-chevron-left"></i></button>
+                <button type="button" class="btn_blog_next"><i class="fa-solid fa-circle-chevron-right"></i></button>
+                <article class="blog_card">
+                    <div class="blog_image">
+                        <img class="img__blog" src="img/blog1 (1).png" alt="img_blog">
+                    </div>
+                    <div class="info_blog">
+                        <p>Coffee trends | May 22, 2022</p>
+                        <h2>What's up with flat white?</h2>
+                        <p>Remember the time when flat white suddenly appeared in all trendy coffee shops and became the
+                            most popular drink? But who orders it now? Almost nobody...</p>
+                    </div>
+                </article>
+                <article class="blog_card">
+                    <div class="blog_image">
+                        <img class="img__blog" src="img/img_coffee_blog.png" alt="img_blog">
+                    </div>
+                    <div class="info_blog">
+                        <p>Coffee trends | October 03, 2022</p>
+                        <h2>TOP WINTER COFFEE DRINKS</h2>
+                        <p>A few more weeks, and it will get really cold outside. It's time to put together a winter
+                            menu and prepare some new hot drinks for your customers with our top recipes...</p>
+                    </div>
+                </article>
+                <article class="blog_card">
+                    <div class="blog_image">
+                        <img class="img__blog" src="img/img_coffee_blog1.png" alt="img_blog">
+                    </div>
+                    <div class="info_blog">
+                        <p>Infographics | October 12, 2022</p>
+                        <h2>How to please any taste</h2>
+                        <p>Coffee lovers have their own preferences. Someone likes strong coffee while someone adds a
+                            lot of milk. Someone prefers Arabica, and others love Robusta most of all...</p>
+                    </div>
+                </article>
+            </div>
+        </section>
         <section class="video">
             <div class="video_make-coffee">
                 <p class="fonts_logo_video">Video</p>
