some changes in header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="emptyTwo"></div>
             <div class="nav__social">
                 <ul class="header__list__social">
-                    <li>
+                    <li class="nav__link__social">
                         <a href="https://www.facebook.com/" target="_blank">
                             <svg width="30" class="svg-icon" viewBox="0 0 32 32">
                                 <path class="logo_2gS"
