change section blog

--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
             </div>
         </section>
         <section class="blog">
+            <div class="blog_info">
+                <p class="logo_blog_p">Blog</p>
+                <h2 class="logo_blog_h2">READ OUR LATEST NEWS AND ARTICLES
+                </h2>
+                <div class="shot__line"></div>
+                <p class="logo_blog__p">Dive into the modern coffee culture with us!</p>
+            </div>
             <div class="container__blog">
                 <div class="btn_blog_prev"><i class="fa-solid fa-circle-chevron-left"></i></div>
                 <div class="slider-line">
