--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="nav__link__social">
                         <a href="https://www.instagram.com/" target="_blank">
                             <svg width="30" class="svg-icon" viewBox="0 0 32 32">
                                 <g>
@@ -60,7 +60,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="nav__link__social">
                         <a href="https://twitter.com/" target="_blank">
                             <svg width="30" class="svg-icon" viewBox="0 0 32 32">
                                 <path class="logo_2gS"
@@ -69,7 +69,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="nav__link__social">
                         <a href="https://www.youtube.com/" target="_blank">
                             <svg width="30" class="svg-icon" viewBox="0 0 32 32">
                                 <path class="logo_2gS"
