--- a/index.html
+++ b/index.html
@@ -831,6 +831,7 @@
     <script src="js/app-pricing-cards.js"></script>
     <script src="js/galery.js"></script>
     <script src="js/carousel-blog.js"></script>
+    <script src="js/remem.js"></script>
 
 </body>
 
