--- a/index.html
+++ b/index.html
@@ -214,10 +214,8 @@
                 <p class="logo_blog__p">Dive into the modern coffee culture with us!</p>
             </div>
             <div class="container__blog">
-
                 <div class="container__blog"></div>
                 <div class="btn_blog_prev"><i class="fa-solid fa-circle-chevron-left"></i></div>
-
                 <div class="slider-line"></div>
                 <div class="btn_blog_next"><i class="fa-solid fa-circle-chevron-right"></i></div>
             </div>
@@ -863,26 +861,29 @@
                 </div>
             </article>
         </section>
-
-
-        <div>
-            <a href="main-page" class="ending__links">
-                <h2>COFFEE LAB SCHOOL</h2>
-                <p>MASTER YOUR COFFEE SKILLS</p>
-            </a>
-        </div>
-        <a href="about us" class="ending__links">About us</a>
-        <a href="courses" class="ending__links">Courses</a>
-        <a href="prising" class="ending__links">Prising</a>
-        <a href="recipes" class="ending__links">Recipies</a>
-        <a href="testimonials" class="ending__links">Testimonials</a>
-        <a href="blog" class="ending__links">Blog</a>
-
-
-
-
-
-
+        <section class="line_footer">
+            <div class="container-footer">
+                <a href="">
+                    <img class="image_footer" src="img/617a8857d0c3450022895bec.svg" alt="image_footer">
+                </a>
+                <div class="li_footer">
+                    <a href="#about__us" class="ending__links" type="submit">About us</a>
+                    <a href="#courses" class="ending__links" type="submit">Courses</a>
+                    <a href="#prising" class="ending__links" type="submit">Prising</a>
+                    <a href="#recipies" class="ending__links" type="submit">Recipies</a>
+                    <a href="testimonials" class="ending__links" type="submit">Testimonials</a>
+                    <a href="#blog" class="ending__links" type="submit">Blog</a>
+                </div>
+                <div class="footer__icons">
+                    <a class="footer__icon_font" type="submit" href="http://facebook.com">
+                        <i class="fa-brands fa-facebook"></i></a>
+                    <a class="footer__icon_font" type="submit" href="http://instagram.com">
+                        <i class="fa-brands fa-instagram"></i></a>
+                    <a class="footer__icon_font" type="submit" href="http://youtube.com">
+                        <i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
