change footer img

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
     </main>
 
 
-    <!-- Harasym Nazar-->
+    <!-- Harasym Nazar / Natalia Danylovych-->
     <footer class="footer_footer">
         <div class="svg__footer-cl"><svg width="100%" height="117" viewBox="0 0 2100 117" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -864,7 +864,7 @@
         <section class="line_footer">
             <div class="container-footer">
                 <a href="">
-                    <img class="image_footer" src="img/617a8857d0c3450022895bec.svg" alt="image_footer">
+                    <img class="image_footer" src="img/img_footer_svg.svg" alt="image_footer">
                 </a>
                 <div class="li_footer">
                     <a href="#about__us" class="ending__links" type="submit">About us</a>
