--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <main>
         <!-- Olha Moroz-->
-        <section class="make-coffe-like-a-pro" id="courses">
+        <!-- <section class="make-coffe-like-a-pro" id="courses">
             <p class="make-coffe-like-a-pro-title">Courses</p>
             <h2 class="make-coffe-like-a-pro-title2">MAKE COFFEE LIKE A PRO</h2>
             <p>Sign up for one of our professional courses.</p>
@@ -170,7 +170,7 @@
                     <a href="contacts" class="button">Sign Up</a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- Natalia Danylovych -->
