--- a/index.html
+++ b/index.html
@@ -605,11 +605,11 @@
                 <div class="happy__review about__course__time">We are happy with each review you leave.</div>
             </div>
             <div class="ws__carusel">
-                <div class="pr-carousel">
+                <!--<div class="pr-carousel">
                     <button class="btn-prev">Previous</button>
                     <div class="slide-container"></div>
                     <button class="btn-next">Next</button>
-                </div>
+                </div>-->
                 <div class="ws__card">
                     <div class="ws__card__icon"></div>
                     <div class="ws__card__name">JOHN JELLY</div>
