--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
 
                     </li>
                 </ul>
-
-            </div>
             </div>
         </nav>
         <div class="header__container">
@@ -361,7 +359,7 @@
                 </div>
 
             </div>
-            </div>
+
             <!-- <img src="img/top-white-cloud-rt.svg" alt="top-white-cloud-rt"> -->
         </section>
 
@@ -492,7 +490,6 @@
                     </button>
                 </article>-->
             </div>
-            </div>
             <div class="img-under-pricing">
                 <svg width="100%" height="100%" viewBox="0 0 2100 183" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="2100" height="80" fill="#27292B" />
@@ -596,54 +593,6 @@
                 alt="remember_this__two-big-photos">
         </section>
 
-        <!-- Yevhen Ostrovskyi-->
-        <section class="what__our__students__say" id="testmonials">
-            <div class="ws__say__inner">
-                <div class="little__title">Testimonials</div>
-                <div class="ws__say about__title">WHAT OUR STUDENTS SAY</div>
-                <div class="shot__line"></div>
-                <div class="happy__review about__course__time">We are happy with each review you leave.</div>
-            </div>
-            <div class="ws__carusel">
-                <!--<div class="pr-carousel">
-                    <button class="btn-prev">Previous</button>
-                    <div class="slide-container"></div>
-                    <button class="btn-next">Next</button>
-                </div>-->
-                <div class="ws__card">
-                    <div class="ws__card__icon"></div>
-                    <div class="ws__card__name">JOHN JELLY</div>
-                    <div class="ws__card__course"><em>Coffee Enthusiast</em></div>
-                    <div class="ws__content">“I am the kind of person that can sing odes to coffee. At the
-                        course, I learned to make the perfect coffee at home, so now I have no reason to leave it at
-                        all. I can't even count how much money I’m saving on coffee-to-go every day!”</div>
-                    <div class="ws__data">December 15, 2021</div>
-                </div>
-                <div class="ws__card">
-                    <div class="ws__card__icon"></div>
-                    <div class="ws__card__name">MARY WOLLEN</div>
-                    <div class="ws__card__course"><em>Barista</em></div>
-                    <div class="ws__content">“I was so happy to study at CoffeeLab. They know how to work
-                        with
-                        poor learners and find the best approach to them. Sure, I still have many tricks to learn,
-                        but
-                        this school gave me basic skills that I use every day at work.”</div>
-                    <div class="ws__data">March 15, 2021</div>
-                </div>
-                <div class="ws__card">
-                    <div class="ws__card__icon"></div>
-                    <div class="ws__card__name">LILLY BLUES</div>
-                    <div class="ws__card__course"><em>Bar Owner</em></div>
-                    <div class="ws__content">“It changed the way I'm doing my business. The courses gave me
-                        the
-                        management basics for my own coffee bar and the community gave the best baristas. Running my
-                        coffee place is now such a pleasure.”</div>
-                    <div class="ws__data">November 22, 2021</div>
-                </div>
-            </div>
-        </section>
-
-
         <!-- Tetyana Pasecnhyk-->
         <section class="ab__our__courses" id="contacts">
             <div class="about__our__inner">
@@ -660,11 +609,10 @@
                         have any questions, please read this section or contact us directly.</p>
                 </div>
                 <div class="about__btn">
-                    <span><a href="#pricing" class="btn__select__course">Select a Course</a>
-                    </span>
-                    <span><a href="#" class="btn__contact">Contact Us</a></span>
+                    <div><a href="#pricing" class="btn__select__course">Select a Course</a>
+                    </div>
+                    <div><a href="#" class="btn__contact">Contact Us</a></div>
                 </div>
-            </div>
             </div>
             <div class="info__about__course">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -733,8 +681,24 @@
                 </div>
             </div>
         </section>
-    </main>
 
+        <!-- Yevhen Ostrovskyi / Tetyana Pasecnhyk-->
+        <section class="what__our__students__say" id="testmonials">
+            <div class="ws__say__inner">
+                <div class="little__title">Testimonials</div>
+                <h2 class="ws__say about__title">WHAT OUR STUDENTS SAY</h2>
+                <div class="shot__line"></div>
+                <div class="ab__course__time">We are happy with each review you leave.</div>
+            </div>
+            <div class="ws__carusel">
+                <div class="say__carousel">
+                    <div class="btn__prev"><i class="fa-solid fa-chevron-left"></i></div>
+                    <div class="slide__container"></div>
+                    <div class="btn__next"><i class="fa-solid fa-chevron-right"></i></div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Harasym Nazar / Natalia Danylovych-->
     <footer class="footer_footer">
@@ -893,6 +857,7 @@
     <script src="js/galery.js"></script>
     <script src="js/carousel-blog.js"></script>
     <script src="js/remem.js"></script>
+    <script src="js/pr-carousel.js"></script>
 
 </body>
 
