added id footer

--- a/index.html
+++ b/index.html
@@ -609,9 +609,8 @@
                         have any questions, please read this section or contact us directly.</p>
                 </div>
                 <div class="about__btn">
-                    <div><a href="#pricing" class="btn__select__course">Select a Course</a>
-                    </div>
-                    <div><a href="#" class="btn__contact">Contact Us</a></div>
+                    <a href="#pricing" class="btn__select__course btn__ab">Select a Course</a>
+                    <a href="#footer" class="btn__contact btn__ab">Contact Us</a>
                 </div>
             </div>
             <div class="info__about__course">
@@ -711,7 +710,7 @@
                     d="M0 116.901H2100V36.4014L1781.22 50.9014L1363.74 82.6418L545.899 63.4968H343.453L151.079 82.6418L0 54.4281V116.901Z"
                     fill="#27292B" />
             </svg></div>
-        <section class="footer_us">
+        <section class="footer_us" id="footer">
             <div class="form_us">
                 <div class="form_footer_us">
                     <div class="write_us_footer">
