change footer and team

--- a/index.html
+++ b/index.html
@@ -845,6 +845,13 @@
                     <a class="footer__icon_font" type="submit" href="http://youtube.com">
                         <i class="fa-brands fa-youtube"></i></a>
                 </div>
+
+
+            </div>
+            <hr class="hr_footer_and">
+            <div class="p_footer_and">
+                <p class="footer_p_and">© Created by</p>
+                <p class="footer_p_and_p">All rights Reserved</p>
             </div>
         </section>
     </footer>
