--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                         </div>
                     </div>
 
-                    <form class="form_footer" action="" method="">
+                    <form class="form_footer" action="https://formspree.io/f/xjvzored" method="POST">
                         <input class="f_input" type="text" name="full-name" required placeholder="Full Name*">
                         <input class="f_input" type="text" name="phone numbr" required placeholder="Phone Number*">
                         <input class="f_input" type="email" name="email" required placeholder="Email*">
